# benchmark-cryptography

./: .gitignore
BC__Butterknife/include/: butterknife.h
BC__Butterknife/source/: butterknife256.c  butterknife256_tks.c
Deoxys-cipher/: README.md  aes_decryption.cpp  aes_encryption.cpp  deoxys_decryption.cpp  deoxys_encryption.cpp
GCTR-3/: gctr-3.c
GCTR-3/butterknife/: gctr-3-bk.c  gctr-3-bk.h  gctr-3-prime-bk.c  gctr-3-prime-bk.h
GCTR-3/forkskinny/: fenc.c  fenc.h  gctr-3-fs.c  gctr-3-fs.h  gctr-3-prime.c  gctr-3-prime.h  gctr-3.c  gctr-3.h
SKINNY-AEAD/: internal-skinny128.c  internal-skinny128.h
block/: CMakeLists.txt  prj.conf
block/src/: main.c  rijndael256.c  rijndael256.h
deoxysi/: deoxys.c  deoxys.h
deoxysi128/deoxysi128/: deoxysbc256_opt.c  deoxysbc256_opt.h
deoxysi128/deoxysi128/ref/: api.h  deoxys.h  deoxysi.c  encrypt.c  tweakableBC.c  tweakableBC.h
deoxysi128/deoxysi128/table/: deoxysi.c  tweakableBC.c
deoxysi256/deoxysi256/ref/: api.h  deoxys.h  deoxysi.c  encrypt.c  tweakableBC.c  tweakableBC.h
deoxysi256/deoxysi256/table/: deoxysi.c
forkskinny-opt32/: cortex-m4.mk  internal-forkskinny.c  internal-forkskinny.h
forkskinny_tbc/: forkskinny_tbc.c  forkskinny_tbc.h
gcm/aes/: CMakeLists.txt  prj.conf
gcm/aes-128/: CMakeLists.txt  prj.conf
gcm/aes-128/src/: aes_sw.c  aes_sw.h  aesgcm.c  aesgcm.h  bench.c  ghash.c  main.c  main_scratch.c
gcm/aes-256/: CMakeLists.txt  prj.conf
gcm/aes-256/src/: aes_sw.c  aes_sw.h  aesgcm.c  aesgcm.h  bench.c  main.c  main_scratch.c  utils.c
gcm/aes/src/: aes-128_gcm.c  aes_gcm.c  aes_gcm.h  bench.c  bench.h  gf.c  main.c  rijndael_256_gcm.c  rijndael_256_gcm.h
gcm/butterknife/: CMakeLists.txt
gcm/butterknife/src/: bench.c  bench.h  butterknife-gcm.c  butterknife-gcm.h  main.c  utils.h
gcm/forkskinny/: CMakeLists.txt
gcm/forkskinny/src/: bench.c  forkskinny_gcm.c  forkskinny_gcm.h  gf.h  main.c
gcm/skinny/: CMakeLists.txt  prj.conf
gcm/skinny/src/: bench.c  bench.h  ghash.h  main.c  skinny_gcm.c  skinny_gcm.h
host_shim/zephyr/: kernel.h
ocb/forkskinny/: CMakeLists.txt
ocb/forkskinny/src/: bench.c  forkskinny_ocb.c  main.c
ocb/skinny/: CMakeLists.txt  prj.conf
ocb/skinny/src/: bench.c  bench.h  main.c  skinny_ocb.c  skinny_ocb.h
safe/butterknife/: CMakeLists.txt
safe/butterknife/src/: bench.c  bench.h  butterknife_safe.c  butterknife_safe.h  main.c
safe/forkskinny/: CMakeLists.txt  prj.conf
safe/forkskinny/src/: bench.c  bench.h  forkskinny_safe.c  forkskinny_safe.h  main.c
sct/butterknife/: CMakeLists.txt
sct/butterknife/src/: bench.c  bench.h  main.c
sct/forkskinny/: CMakeLists.txt  prj.conf
sct/forkskinny/src/: bench.c  bench.h  forkskinny_sct.c  forkskinny_sct.h  main.c
sct/skinny/: CMakeLists.txt  prj.conf
sct/skinny/src/: bench.c  bench.h  main.c  skinny_sct.c  skinny_sct.h
skinny_tbc/: skinny_tbc.c  skinny_tbc.h
sonicae/forkskinny/: CMakeLists.txt  prj.conf
sonicae/forkskinny/src/: bench.c  bench.h  forkskinny_sonicae.c  forkskinny_sonicae.h  forkskinny_supersonic.c  forkskinny_supersonic.h  main.c
supersonic/: CMakeLists.txt  prj.conf
supersonic-star/: .gitignore  CMakeLists.txt  prj.conf
supersonic-star/src/: main.c  supersonic-star_butterknife.c  supersonic-star_butterknife_opt.c  supersonic-star_butterknife_skinny.c  supersonic-star_forkskinny.c
supersonic-star/src/include/: sonics_ref.h  supersonic_bk_star.h  supersonic_fs_star.h  supersonic_star.h
supersonic/src/: gctr3.c  host_compat.h  main.c  supersonic_butterknife.c  supersonic_forkskinny.c
supersonic/src/include/: gctr3.h  sonics_ref.h  supersonic.h
zafe/butterknife/: CMakeLists.txt
zafe/butterknife/src/: bench.c  bench.h  butterknife_zafe.c  butterknife_zafe.h  main.c
zafe/forkskinny/: CMakeLists.txt  prj.conf
zafe/forkskinny/src/: bench.c  bench.h  forkskinny_zafe.c  forkskinny_zafe.h  forkskinny_zafe_opt.c  forkskinny_zafe_opt.h  main.c  stm32f4_wrapper.c  stm32wrapper.h  stm32wrapper_zephyr.c
zafe/forkskinny/src/libopencm3/cm3/: dwt.h  scs.h
zafe/forkskinny/src/libopencm3/stm32/: flash.h  gpio.h  rcc.h  rng.h  usart.h
